--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-picker/picker": "^2.2.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "axios": "^0.24.0",
     "expo": "~43.0.0",
     "expo-asset": "~8.4.3",
     "expo-constants": "~12.1.2",
     "expo-font": "~10.0.3",
+    "expo-linear-gradient": "~10.0.3",
     "expo-linking": "~2.4.2",
     "expo-splash-screen": "~0.13.3",
     "expo-status-bar": "~1.1.0",
