--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
-    "@react-native-picker/picker": "^2.2.0",
+    "@react-native-picker/picker": "2.1.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "axios": "^0.24.0",
@@ -24,15 +25,22 @@
     "expo-font": "~10.0.3",
     "expo-linear-gradient": "~10.0.3",
     "expo-linking": "~2.4.2",
+    "expo-secure-store": "~11.0.3",
     "expo-splash-screen": "~0.13.3",
     "expo-status-bar": "~1.1.0",
     "expo-web-browser": "~10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-gesture-handler": "^2.1.0",
+    "react-native-modal": "^13.0.0",
+    "react-native-modalize": "^2.0.13",
+    "react-native-pager-view": "5.4.6",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
-    "react-native-web": "0.17.1"
+    "react-native-tab-view": "^3.1.1",
+    "react-native-web": "0.17.1",
+    "expo-clipboard": "~2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
