--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "axios": "^0.24.0",
     "expo": "~43.0.0",
     "expo-asset": "~8.4.3",
+    "expo-clipboard": "~2.0.3",
     "expo-constants": "~12.1.2",
+    "expo-document-picker": "~10.0.3",
     "expo-font": "~10.0.3",
     "expo-linear-gradient": "~10.0.3",
     "expo-linking": "~2.4.2",
@@ -32,6 +34,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-canvas": "^0.1.38",
+    "react-native-document-picker": "^7.1.3",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-modal": "^13.0.0",
     "react-native-modalize": "^2.0.13",
@@ -40,7 +44,7 @@
     "react-native-screens": "~3.8.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
-    "expo-clipboard": "~2.0.3"
+    "react-native-webview": "^11.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
