--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
+    "@itsmistad/react-native-sketch-canvas": "^0.8.3",
     "@react-native-picker/picker": "2.1.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/material-top-tabs": "^6.0.6",
@@ -40,11 +41,13 @@
     "react-native-modal": "^13.0.0",
     "react-native-modalize": "^2.0.13",
     "react-native-pager-view": "5.4.6",
+    "react-native-paper": "^4.11.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
-    "react-native-webview": "^11.16.0"
+    "react-native-webview": "11.13.0",
+    "@react-native-async-storage/async-storage": "~1.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
