--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@expo/vector-icons": "^12.0.0",
     "@itsmistad/react-native-sketch-canvas": "^0.8.3",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-picker/picker": "2.1.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/material-top-tabs": "^6.0.6",
@@ -47,12 +48,13 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
     "react-native-webview": "11.13.0",
-    "@react-native-async-storage/async-storage": "~1.15.0"
+    "string-similarity": "^4.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/string-similarity": "^4.0.0",
     "jest-expo": "~43.0.0",
     "typescript": "~4.3.5"
   },
