--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
     "react-native-webview": "11.13.0",
+    "socket.io-client": "^4.4.1",
     "string-similarity": "^4.0.4"
   },
   "devDependencies": {
