--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-modalize": "^2.0.13",
     "react-native-pager-view": "5.4.6",
     "react-native-paper": "^4.11.2",
+    "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-tab-view": "^3.1.1",
